test/spec_vectors/exports/ok/module_10.wat
(module (export "a" (func $a)) (func $a))