test/spec_vectors/exports/fail/module_23.wat
(module (tag $t0 (export "t0")) (tag $t1 (export "t0")))